fixed z-indexing for combo boxes

--- a/app/styles/less/forms.less
+++ b/app/styles/less/forms.less
@@ -56,6 +56,7 @@ input, .autocomplete {
     width: 100%;
     background-color: white;
     position: absolute;
+    z-index: 1;
     top: 35px;
     left: 0;
     border-radius: 4px;
